# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  29 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Default bootmisc behaviour is now to wipe /tmp completely.

    Fix a few initial mounting problems, thanks to Daniel Drake.

    coldplugged devices that are in the default runlevel now start in the
    boot runlevel.

  26 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    Clean gpg/wpa tmp files #163807 by Pat Double.

  18 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    Add /bin/fish to /etc/shells #162673 by Donnie Berkholz.

* baselayout-1.13.0_alpha12 (17 Jan 2006)

  16 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    rc now stops services that are "starting" when in the stopping phase.

    Stop start-stop-daemon --quiet --test from spamming stdout.

    Stop hotplug events from spamming log files.

  15 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Fix ifplugd stopping.

    rc-status no longer errors when in single user on FreeBSD.

    rc-depend has a much saner calculates which services provide what
    in a much saner way. Hopefully this now works for all situations of
    how you want the net depend to be fulfilled!

  14 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Change from using symlinks to real files so we can test mtimes
    in svc_in_control, #154670.

    Fix ip6 routes when iproute2 isn't installed, #161959.

    Allow the setting of a global metric, #161822.

  12 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Revive old default behaviour of network scripts, #161510.
    This is toggled throught the use of RC_STRICT_DEPEND.

    Fix bootmisc, #161328.

  10 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Fix some restarting issues when --nodeps is used.
    Fix stopping for daemons that take some time.

  10 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    Rename --update option in depscan.sh to --force.
